# Aruba-NOC-MCP-Server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ATTESTATIONS_QUICKSTART.md  DEPLOYMENT_GUIDE.md  Dockerfile  MCP_OPTIMIZATION_GUIDE.md  PRODUCTION_TEST_RESULTS.md  README.md  REVIEW_SUMMARY.md  TROUBLESHOOTING.md  build.sh  deploy.sh  docker-compose.yaml  mcp_config.json  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  requirements.txt.backup  run_production_test.sh  test_all_40_tools.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-build-push.yml  release.yml
.serena/: project.yml
docs/: DOCKER_SECURITY_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  LANGSMITH_INTEGRATION_SUMMARY.md  LANGSMITH_QUICKSTART.md  PRODUCTION_MONITORING_PLAN.md  SUPPLY_CHAIN_ATTESTATIONS_SETUP.md
scripts/: test_all_endpoints.py  test_all_endpoints_extended.py  test_connection.py
src/: __init__.py  api_client.py  config.py  langsmith_tracing.py  observability.py  resilience.py  server.py  version_check.py
src/tools/: __init__.py  base.py  base_handler.py  clients.py  devices.py  firmware.py  gateways.py  get_ap_cpu_utilization.py  get_ap_details.py  get_ap_radios.py  get_async_test_result.py  get_client_trends.py  get_device_inventory.py  get_firewall_sessions.py  get_gateway_cluster_info.py  get_gateway_cpu_utilization.py  get_gateway_details.py  get_gateway_uplinks.py  get_site_details.py  get_stack_members.py  get_switch_details.py  get_switch_interfaces.py  get_tenant_device_health.py  get_top_aps_by_bandwidth.py  get_top_clients_by_usage.py  get_wlan_details.py  health.py  list_gateway_tunnels.py  list_idps_threats.py  list_wlans.py  models.py  ping_from_ap.py  ping_from_gateway.py  site_helper.py  sites.py  traceroute_from_ap.py  verify_facts.py
tests/: __init__.py  conftest.py  test_api_client.py  test_api_client_regression.py  test_concurrent_behavior.py  test_config.py  test_config_regression.py  test_langsmith_integration.py  test_server.py
tests/tools/: __init__.py  test_base.py  test_base_format_helpers.py  test_clients.py  test_devices.py  test_firmware.py  test_gateways.py  test_handler_patterns.py  test_models.py  test_sites.py
