[project]
name = "aruba-noc-mcp-server"
version = "1.0.0"
description = "MCP server for Aruba Central API integration"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "PERF",   # perflint
    "RUF",    # ruff-specific
]
ignore = [
    "TRY003",   # Avoid specifying long messages outside exception class
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLR0911",  # Too many return statements (complex handlers)
    "PLR0912",  # Too many branches (complex handlers)
    "PLR0915",  # Too many statements (complex handlers)
    "PLC0415",  # Import outside top-level (intentional in tests)
    "ARG001",   # Unused function argument (fixtures)
    "ARG002",   # Unused method argument (fixtures)
    "PT011",    # pytest.raises too broad (match not always needed)
    "SIM117",   # Multiple with statements (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
